@@ -21,6 +21,7 @@ ant.build.javac.target=5
 # for profiling
 test.jvmarg=-Xrunhprof:cpu=samples,depth=20
 #test.jvmarg=
+test.dir=test
 
 ############################
 #version=0.1
