@@ -52,11 +52,14 @@
 		</javac>
 	</target>
 
+	<target name="test" depends="junit,test-large" description="Run all tests"/>
+
 	<target name="junit" depends="jar,jar-junit" description="Run JUnit tests">
 		<available file="log4j.properties" property="log4j.configuration.present" value="file://${user.dir}/junit.log4j.properties"/>
-		<junit printsummary="withOutAndErr" fork="yes">
+		<mkdir dir="${test.dir}/results"/>
+		<junit printsummary="withOutAndErr" fork="yes" failureProperty="test.failure">
 			<sysproperty key="log4j.configuration" value="${log4j.configuration.present}"/>
-			<formatter type="plain"/>
+			<formatter type="xml"/>
 			<classpath>
 				<pathelement location="${jcae.jar}"/>
 				<pathelement location="${junit.jar}"/>
@@ -65,15 +68,34 @@
 			<assertions>
 				<enable package="org.jcae.mesh.amibe"/>
 			</assertions>
-  			<test name="org.jcae.mesh.amibe.util.PAVLSortedTreeTest"/>
-  			<test name="org.jcae.mesh.amibe.util.PRedBlackSortedTreeTest"/>
-  			<test name="org.jcae.mesh.amibe.ds.HalfEdgeTest"/>
-  			<test name="org.jcae.mesh.amibe.ds.VirtualHalfEdgeTest"/>
-  			<test name="org.jcae.mesh.oemm.PAVLTreeIntArrayDupTest"/>
-  			<test name="org.jcae.mesh.amibe.metrics.Matrix2DTest"/>
-			<test name="org.jcae.mesh.amibe.algos3d.QEMDecimateHalfEdgeTest"/>
-			<test name="org.jcae.mesh.amibe.algos3d.SplitEdgeTest"/>
+			<batchtest fork="yes" todir="${test.dir}/results" >
+				<fileset dir="${classes.dir}">
+					<include name="org/jcae/mesh/amibe/**/*Test.class" />
+					<!-- Exclude test classes which serve for inheritance purpose -->
+					<exclude name="org/jcae/mesh/amibe/util/QSortedTreeTest.class"/>
+					<exclude name="org/jcae/mesh/amibe/ds/AbstractHalfEdgeTest.class"/>
+				</fileset>
+			</batchtest>
 		</junit>
+		<fail message="test failed" if="test.failure"/>
+	</target>
+
+	<target name="test-large" depends="jar,jar-junit" description="Run JUnit tests">
+		<available file="log4j.properties" property="log4j.configuration.present" value="file://${user.dir}/junit.log4j.properties"/>
+		<mkdir dir="${test.dir}/results"/>
+		<junit printsummary="withOutAndErr" fork="yes" failureProperty="test.failure">
+			<jvmarg value="-Xmx1200m"/>
+			<sysproperty key="log4j.configuration" value="${log4j.configuration.present}"/>
+			<sysproperty key="test.dir" value="${test.dir}"/>
+			<formatter type="xml"/>
+			<classpath>
+				<pathelement location="${jcae.jar}"/>
+				<pathelement location="${junit.jar}"/>
+				<pathelement location="${jcae.junit.jar}"/>
+			</classpath>
+			<test name="org.jcae.mesh.MesherTest" todir="${test.dir}/results"/>
+		</junit>
+		<fail message="test failed" if="test.failure"/>
 	</target>
 
 	<target name="jar" depends="compile" description="jar">
@@ -160,11 +182,6 @@
 		<zip destfile="${project.name}-doc-${version}.zip">
 			<zipfileset prefix="${project.name}-${version}/doc" dir="doc"/>
 		</zip>
-	</target>
-	<target name="test" description="test" depends="jar">
-		<java jar="${jar}" fork="yes">
-			<jvmarg value="${test.jvmarg}"/>
-		</java>
 	</target>
 
 	<target name="debug-netbeans" depends="jar" if="netbeans.home">
